Bringup derp with spectrum support

--- a/DeviceSettings/res/xml/main.xml
+++ b/DeviceSettings/res/xml/main.xml
@@ -12,32 +12,6 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:key="audio"
-        android:title="@string/audio_title">
-
-        <SwitchPreference
-            android:key="enable_dolby_atmos"
-            android:summary="@string/enable_dolby_summary"
-            android:title="@string/enable_dolby_title"
-            android:defaultValue="true"
-            android:persistent="true" />
-
-        <Preference
-            android:key="dolby_atmos"
-            android:title="@string/dolby_title"
-            android:dependency="enable_dolby_atmos"
-            android:persistent="false" >
-            <intent
-                 android:targetPackage="com.oneplus.sound.tuner"
-                 android:targetClass="com.oneplus.sound.tuner.panoramic.DolbyPanoramicSoundActivity" />
-        </Preference>
-        <Preference
-            android:icon="@drawable/ic_info_outline_24dp"
-            android:persistent="false"
-            android:summary="@string/enable_dolby_info" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
         android:key="graphics"
         android:title="@string/display_title">
 
@@ -58,8 +32,8 @@
             android:summary="@string/panel_category_summary"
             android:persistent="false" >
             <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.havoc.device.DeviceSettings"
-                    android:targetClass="com.havoc.device.DeviceSettings.PanelSettingsActivity" />
+                    android:targetPackage="com.aosip.device.DeviceSettings"
+                    android:targetClass="com.aosip.device.DeviceSettings.PanelSettingsActivity" />
         </Preference>
     </PreferenceCategory>
 
@@ -124,7 +98,7 @@
         android:key="vibrator"
         android:title="@string/category_vibrator">
 
-        <com.havoc.device.DeviceSettings.VibratorStrengthPreference
+        <com.aosip.device.DeviceSettings.VibratorStrengthPreference
             android:key="vib_strength"
             android:title="@string/vib_strength_title_head"
             android:summary="@string/vib_strength_summary_head" />
